Learning Polynomial Regresssion using sklearn in Machine Learning.

--- a/Supervised Learning/Polynomial_regression.ipynb
+++ b/Supervised Learning/Polynomial_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "38fed094",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d40bd534",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "C:\\Users\\ranat\\AppData\\Local\\Temp\\ipykernel_12460\\785519174.py:1: SyntaxWarning: invalid escape sequence '\\M'\n",
+      "  df = pd.read_csv(\"T:\\Machine Learning Course\\Machine Learning\\DataSet\\Salary_Data.csv\")\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "YearsExperience",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Salary",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "042daae2-9c79-4a08-bfdc-cf75679a8cf3",
+       "rows": [
+        [
+         "0",
+         "1.1",
+         "21.0",
+         "39343"
+        ],
+        [
+         "1",
+         "1.3",
+         "21.5",
+         "46205"
+        ],
+        [
+         "2",
+         "1.5",
+         "21.7",
+         "37731"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YearsExperience</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>39343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.3</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>46205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>37731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   YearsExperience   Age  Salary\n",
+       "0              1.1  21.0   39343\n",
+       "1              1.3  21.5   46205\n",
+       "2              1.5  21.7   37731"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"T:\\Machine Learning Course\\Machine Learning\\DataSet\\Salary_Data.csv\")\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b44e27",
    "metadata": {},
    "outputs": [],
    "source": []
